<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include layout="@layout/my_app_bar_layout" />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="cursive"
        android:text="@string/toys"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fav"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorPrimaryDark"
            android:nextFocusDown="@+id/sign_up"
            android:text="@string/fav"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buyLater"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:background="@color/colorPrimaryDark"
            android:nextFocusDown="@+id/sign_up"
            android:text="@string/buy_later"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bought"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorPrimaryDark"
            android:nextFocusDown="@+id/sign_up"
            android:text="@string/bought"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/all"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:background="@color/colorPrimaryDark"
            android:nextFocusDown="@+id/sign_up"
            android:text="@string/allToys"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>